--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "moment": "^2.29.1",
         "multer": "^1.4.1",
         "multer-s3": "^2.9.0",
         "mysql": "^2.18.1",
